--- a/引力波作业/Latex_引力波/引力波报告.tex
+++ b/引力波作业/Latex_引力波/引力波报告.tex
@@ -96,8 +96,93 @@ R = \left(\frac{\rm GM}{\omega^2_{\rm Kep|max}}\right)^{1/3} = 350{\rm km}
 所以，从开普勒定律和牛顿运动定律出发，GW150914在到达合并时刻时其紧密度系数达到黑洞量级，足以证明其密度非常大。
 
 \section{假设的影响}
-在第2节，我们计算出了引力波源是黑洞，但是它存在三个假设，圆形轨道、质量相同、无自旋。本节会讨论这些假设是否会影响结论。
+在第2节，我们计算出了引力波源是黑洞，但是它有三个前提，圆形轨道、质量相同、无自旋。本节会讨论这些假设如何影响结论。
 \subsection{轨道偏心率}
+非圆轨道，偏心率$e>0$,$R$不再是天体的距离，而是轨道半长轴的长度。那么天体轨道距离存在最大值和最小值$(1-e)R<r_{sep}<R$。同时亮度(luminosity)也需要基于偏心率作出调整，但是这只对大偏心率的轨道运动有意义。如果目标轨道的偏心率比较大，信号会在高振幅和低振幅峰值振荡。但这种现象并不存在，正如前文所说，幅值是单调递增。这是因为引力波带走的角动量导致轨道的旋转速度比收缩速度快很多。所以轨道偏心率对结论没有影响。
 \subsection{质量不相等}
+致密度系数$\mathscr{R}$随质量系数$q$的增大而减少。我们使用chirp mass和质量系数来表示天体质量。$m_1=\mathscr{M}(1+q)^{1/5}q^{2/5},m_2 = \mathscr{M}(1+q)^{1/5}q^{-3/5},M=m_1+m_2=\mathscr{M}(1+q)^{6/5}q^{-3/5}$.致密度系数可以表示为
+\begin{equation}
+\begin{aligned}
+\mathscr{R} &=\frac{R}{r_{\text {Schwarz }}(M)}=\frac{c^{2}}{2\left(\left.\omega_{\text {Kep }}\right|_{\max } G M\right)^{2 / 3}} \\
+&=\frac{c^{2}}{2\left(\left.\pi f_{\text {GW }}\right|_{\max } G \mathscr{M}\right)^{2 / 3}} \frac{q^{2 / 5}}{(1+q)^{4 / 5}} \approx \frac{3.0 q^{2 / 5}}{(1+q)^{4 / 5}}
+\end{aligned}
+\end{equation}
+
+如图4所示，致密度系数$R$随质量系数增大而减小。所以，当chirp mass和轨道角频率确定时，天体质量不相等会导致天体密度更大。那么目标天体只能是黑洞。
+
+\begin{figure}[!htbp]
+	\centering
+	\includegraphics{figure-5.png}
+	\caption{致密度系数R随离心率e和质量系数q变化}
+\end{figure}
+
 \subsection{天体自旋}
+质量为m，角动量为S的天体，我们定义旋转参数为
+\begin{equation}
+\chi = \frac{c}{G}\frac{S}{m^2}
+\end{equation}
+天体的自旋会影响天体的引力半径和轨道运动。对于非黑洞天体，无自旋的最小半径是施瓦茨席尔德半径。当天体存在角动量时，比如$\chi=1$，天体的最小引力半径会是施瓦茨席尔德半径的一半。$r_{\rm EK}(m) =\frac{1}{2}r_{\rm Schwarz}(m)=Gm/c^2 $,它与天体质量成正比。对于非黑洞天体，最小半径和为
+\begin{equation}
+\begin{aligned}
+r_{\mathrm{EK}}\left(m_{1}\right)+r_{\mathrm{EK}}\left(m_{2}\right) &=\frac{1}{2} r_{\mathrm{Schwarz}}(M) \\
+&=\frac{G M}{c^{2}} \approx 1.5\left(\frac{M}{\mathrm{M}_{\odot}}\right) \mathrm{km}
+\end{aligned}
+\end{equation}
+
+存在自旋现象的天体的致密度系数要比没有自旋的大得多。$\mathscr{M}\simeq3.4$是无自旋的两倍。所以存在自旋现象的天体的密度要更大。
+\begin{equation}
+\begin{aligned}
+\mathscr{R} &=\frac{r_{\mathrm{sep}}(M)}{r_{\mathrm{EK}}(M)} \leq \frac{R(M)}{r_{\mathrm{EK}}(M)}=\frac{c^{2}}{\left(G M \omega_{\mathrm{Kep}}\right)^{2 / 3}} \\
+& \leq \frac{c^{2}}{\left(2^{6 / 5} G \mathscr{M} \omega_{\mathrm{Kep}}\right)^{2 / 3}} \\
+& = \frac{c^2}{(2^{6/5}\pi\mathscr{M}f_{\rm GW}|_{\rm max})^{2/3}} \simeq 3.4\end{aligned}
+\end{equation}
+
+所以无论有没有自旋和相等的质量，结论都不变：目标天体是黑洞。
+
+\section{距离和光度(luminosity)}
+一些基本的物理参数可以用来估计引力波的光度和波源与我们的距离以及辐射的总能量。引力波的振幅$h$随着距离$d_L$的增加而下降，$h\propto1/d_L$.图1表示，我们测得的应变峰值大约为$10^{-21}$。当距离减小十倍时，峰值增大十倍。但是靠近波源中心时，峰值不会成比例的增大，因为引力波的非线性效应会非常明显。这种情况下，我们估算出一个粗略的数量级上界
+\begin{equation}
+d_L<10^{21}\times200{\rm km}\sim6{\rm Gpc}
+\end{equation}
+
+我们还可以通过光度来更准确的估计距离，因为等质量的天体辐射的引力波光度的峰值与质量无关。根据四极公式，光度$L\sim \frac{G}{c^5}M^2r^4\omega^6$,在最后的合并时刻有$\omega\sim c/t,r\sim GM/c^2,M\omega\sim c^3/G$。我们可以得到Plank光度。
+
+\begin{equation}
+L\sim L_{\rm Planck}=c^5/G=3.6\times10^{52}W
+\end{equation}
+
+\begin{equation}
+\label{A}
+\frac{dE}{dt}=\frac{32}{5}\frac{G}{c^5}\mu^2r^4\omega^6
+\end{equation}
+然而，根据公式(\ref{A}),光度的系数应该为$\frac{32}{5}({\mu}/{M})^2$,同时对天体半径缩小成施瓦西半径的情况进行分析可以得到$M\sim \frac{1}{6}c^2r_{\rm ISCO}/G$和$\omega r\sim 0.5c$。把这些情况考虑进来，$L$的修正系数应有$0.2\times 10^{-3}$。方程(\ref{E4})可以把距离为$d_L$引的力波光度与应变$h$联系起来。
+\begin{equation}
+L=\frac{{\rm d}E_{\rm GW}}{{\rm d}t}=\frac{c^3}{16\pi G}\iint|\dot{h}|^2{\rm d}S\sim\frac{c^3d_L^2}{4G}|\dot{h}|^2\sim\frac{c^5}{4G}\left(\frac{\omega_{\rm GW}d_Lh}{c}\right)^2
+\end{equation}
+所以我们可以得到
+\begin{equation}
+\frac{L_{\rm peak}}{L_{\rm Planck}} \equiv \frac{L|_{\rm max}}{L_{\rm Planck}}\sim 0.2\times 10^{-3}\sim \left(\frac{\omega_{\rm GW}d_Lh|_{\rm max}}{c}\right)^2 
+\end{equation}
+
+我们在峰值达到最大时估计随应变值变化的距离为
+\begin{equation}
+d_L\sim 45{\rm Gpc}\left(\frac{\rm Hz}{f_{\rm GW|_{\rm max}}}\right) \left(\frac{10^{-21}}{h|_{\rm max}}\right)
+\end{equation}
+对于GW150914而言，$d_L\sim 300{\rm Mpc}$。
+
+\begin{equation}
+\label{A2}
+E_{\rm orb} = -\frac{GM\mu}{2r}
+\end{equation}
+利用方程(\ref{A2})，我们可以估计引力波的辐射总能量。从初始距离时$E_{\rm orb}^i\to0$到距离为$r$时，代入$m_1\sim m_2\sim35M_\odot,r\sim R = 350{\rm km}$
+\begin{equation}
+E_{\rm GW}=E_{\rm orb}^i-E_{\rm orb}^f = 0-\left(-\frac{GM\mu}{2R}\right)\sim3M_\odot c^2
+\end{equation}
+这是总能量的最低估计值。
+
+这个能量非常大。在100亿年的生命周期中，太阳预计会将不到1\%的能量转化为光和辐射。GW150914不仅会辐射了将近300倍太阳一生辐射的能量，其在峰值的光度也比太阳大出了22个数量级。
+\section{总结}
+使用一些基本的物理参数理解观测的GW150914应变数据，我们可以得到许多更深层次的结论。这些结论表明引力波源是一对在合并前非常接近的互旋黑洞。合并后稳定形成一个黑洞。我们还可以通过一些简单的参数求出这个波原离为我们的距离和基本信息。
+
+本文只是一个科普文章，其方法并不通用，可能只适合于与GW150914相似的信号。希望本文可以为读者提供理解引力波探测的起点。
 \end{document}
